objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Grid_Applied_Discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applied Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_Area__c</fullName>
        <formula>Opportunity.Grid_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Country__c</fullName>
        <formula>Opportunity.Grid_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_CreatedDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_CurrencyCountry__c</fullName>
        <formula>TEXT(Opportunity.Grid_CurrencyCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_CurrencySymbol__c</fullName>
        <formula>CASE(CurrencyIsoCode, &quot;USD&quot;,&quot;$&quot;,&quot;BRL&quot;,&quot;R$&quot;,&quot;INR&quot;,&quot;₹&quot;, &quot;GBP&quot;,&quot;£&quot;, &quot;CLP&quot;,&quot;CLP$&quot;, &quot;COP&quot;,&quot;Col$&quot;, &quot;RON&quot;,&quot;L&quot;, &quot;PEN&quot;,&quot;S/&quot;,&quot;ARS&quot;,&quot;$&quot;,&quot;CAD&quot;,&quot;C$&quot;,&quot;OMR&quot;,&quot;ر.ع.&quot;,&quot;MYR&quot;,&quot;MR&quot;,&quot;PHP&quot;,&quot;₱&quot;,&quot;IDR&quot;,&quot;Rp&quot;,&quot;MAD&quot;,&quot;د.م.&quot;,&quot;ZAR&quot;,&quot;R&quot;,&quot;MXN&quot;,&quot;$&quot;,&quot;TRY&quot;,&quot;₺&quot;,&quot;€&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_EffectiveTotalRecurringCosts_Yearly__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: Recurring Costs Yearly</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Effective_Recurring_Total_Yearly__c</fullName>
        <label>Effective Recurring Total Yearly</label>
        <summarizedField>QuoteLineItem.Grid_EffectiveRecurringTotalYearly__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_Expected_Gross_Margin__c</fullName>
        <formula>Grid_Quote_Total_Price__c  -  Grid_Quote_Total_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_Expected_Gross_Margin_percentage__c</fullName>
        <formula>( Grid_Quote_Total_Price__c -  Grid_Quote_Total_Costs__c ) /  Grid_Quote_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grid_Expected_Mark_up_percentage__c</fullName>
        <formula>(Grid_Quote_Total_Price__c -  Grid_Quote_Total_Costs__c  ) / Grid_Quote_Total_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Mark up (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grid_ExpirationDate__c</fullName>
        <label>Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_HasDiscountPending__c</fullName>
        <label>Has discount pending</label>
        <summaryFilterItems>
            <field>vlocity_cmt__QuoteDiscount__c.vlocity_cmt__ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Pending, Not Submitted</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_cmt__QuoteDiscount__c.vlocity_cmt__QuoteId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_MacroGeography__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Grid_MacroGeography</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_MonthTotalCharge__c</fullName>
        <label>Month Total Charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_MonthTotalCost__c</fullName>
        <label>Month Total Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_NumberOfContractedMonths__c</fullName>
        <formula>ROUND(Opportunity.Grid_NumberOfContractedMonths__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated by End Contract Date - Start Contract Date of the Opportunity. If you need to change it, please refer to the specific fields on the opportunity record.</inlineHelpText>
        <label>Number of contracted Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_NumberOfHardwareProducts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>number of hardware products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_NumberQuoteLineItems__c</fullName>
        <label>Number Quote Line Items</label>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_OneTimeMarginTotal__c</fullName>
        <formula>IF(vlocity_cmt__EffectiveOneTimeTotal__c &gt; 0, ((vlocity_cmt__EffectiveOneTimeTotal__c - vlocity_cmt__EffectiveOneTimeCostTotal__c ) / vlocity_cmt__EffectiveOneTimeTotal__c) * 100, IF(vlocity_cmt__EffectiveOneTimeCostTotal__c &gt; 0, ((vlocity_cmt__EffectiveOneTimeTotal__c - vlocity_cmt__EffectiveOneTimeCostTotal__c ) / vlocity_cmt__EffectiveOneTimeCostTotal__c) * 100, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_Parent_Quote_Recurring_Total_Yearly__c</fullName>
        <label>Parent Quote Recurring Total Yearly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_QuoteAutoNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quote Auto Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_QuoteName__c</fullName>
        <formula>Opportunity.Grid_OpportunityConvention__c &amp; &quot;_&quot;  &amp;  TEXT(Grid_QuoteAutoNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Convention Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_QuoteTotal__c</fullName>
        <formula>(vlocity_cmt__EffectiveRecurringTotal__c * Grid_NumberOfContractedMonths__c) + vlocity_cmt__EffectiveOneTimeTotal__c + ( Grid_Effective_Recurring_Total_Yearly__c *  (Grid_NumberOfContractedMonths__c / 12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as: Effective One Time Total + ( Effective Recurring Total * N of Contracted Months) + (Effective Recurring Total Yearly * N of Contracted Months/12)</inlineHelpText>
        <label>Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Quote_Total_Costs__c</fullName>
        <label>Quote Total Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Quote_Total_Price__c</fullName>
        <label>Quote Total Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_RecurringMarginTotalYearly__c</fullName>
        <formula>IF(Grid_Effective_Recurring_Total_Yearly__c &gt; 0,((Grid_Effective_Recurring_Total_Yearly__c - Grid_EffectiveTotalRecurringCosts_Yearly__c) / Grid_Effective_Recurring_Total_Yearly__c) * 100, IF(Grid_EffectiveTotalRecurringCosts_Yearly__c &gt; 0 , ((Grid_Effective_Recurring_Total_Yearly__c - Grid_EffectiveTotalRecurringCosts_Yearly__c) / Grid_EffectiveTotalRecurringCosts_Yearly__c) * 100, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Margin Total Yearly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_RecurringMarginTotal__c</fullName>
        <formula>IF(vlocity_cmt__EffectiveRecurringTotal__c &gt; 0, ((vlocity_cmt__EffectiveRecurringTotal__c - vlocity_cmt__EffectiveRecurringCostTotal__c) / vlocity_cmt__EffectiveRecurringTotal__c) * 100, IF(vlocity_cmt__EffectiveRecurringCostTotal__c &gt; 0, ((vlocity_cmt__EffectiveRecurringTotal__c - vlocity_cmt__EffectiveRecurringCostTotal__c) / vlocity_cmt__EffectiveRecurringCostTotal__c) * 100, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_Recurring_Margin_Total_Yearly__c</fullName>
        <label>Recurring Margin Total Yearly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grid_ServiceIncludingSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service (Including System)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Delivery_Plan__c</fullName>
        <label>Number Delivery Plan</label>
        <summaryForeignKey>DeliveryPlan__c.Grid_Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountRecordType__c</fullName>
        <formula>Opportunity.vlocity_cmt__AccountRecordType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountSLA__c</fullName>
        <formula>Opportunity.vlocity_cmt__AccountSLA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncJobId__c</fullName>
        <description>This stores asynchronous job Id if any jobs running on this quote.</description>
        <inlineHelpText>This stores asynchronous job Id if any jobs running on this quote.</inlineHelpText>
        <label>Async Job</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperation__c</fullName>
        <description>This stores the asynchronous operation name for which this quote is locked.</description>
        <inlineHelpText>This stores the asynchronous operation name for which this quote is locked.</inlineHelpText>
        <label>Async Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BudgetAmount__c</fullName>
        <description>The budget amount which the customer says they cannot spend above.</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CartContextValues__c</fullName>
        <description>The field is used to store context value of the quote.</description>
        <label>Cart Context Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CreditCheckDecision__c</fullName>
        <description>Stores the result of the credit check.</description>
        <label>Credit Check Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                    <default>true</default>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Accepted-Reference</fullName>
                </value>
                <value>
                    <fullName>Accept-Deposit</fullName>
                </value>
                <value>
                    <fullName>Accepted-Upsell</fullName>
                </value>
                <value>
                    <fullName>Accepted-Downsale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultBillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Account Quotes</relationshipLabel>
        <relationshipName>BillingAccountQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultCurrencyPaymentMode__c</fullName>
        <label>Default Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultPremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Premises associated with this quote</description>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Premises Quotes</relationshipLabel>
        <relationshipName>PremisesQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Service Account associated with this Quote</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Account Quotes</relationshipLabel>
        <relationshipName>ServiceAccountQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Service Point associated with this quote</description>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Service Point Quotes</relationshipLabel>
        <relationshipName>ServicePointQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DeliveryInstallationStatus__c</fullName>
        <label>Delivery Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveBaseOneTimeCharge__c</fullName>
        <description>Roll up of the one-time charges of the quote line items before applying adjustments.</description>
        <label>Effective Total: Base One Time Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveBaseRecurringCharge__c</fullName>
        <description>Roll up of the recurring charges of the quote line items before applying adjustments.</description>
        <label>Effective Total: Base Recurring Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Loyalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveQuoteTotal__c</fullName>
        <formula>vlocity_cmt__EffectiveOneTimeTotal__c +  Tax + ( vlocity_cmt__EffectiveRecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: Recurring Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsageCostTotal__c</fullName>
        <description>Effective Usage Cost Total</description>
        <label>Usage Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsagePriceTotal__c</fullName>
        <description>Effective Usage Price Total</description>
        <label>Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExternalPricingStatus__c</fullName>
        <description>This field is to keep track of external pricing status.</description>
        <label>External Pricing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Ready</fullName>
                    <default>true</default>
                    <label>Not Ready</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Request Confirmed</fullName>
                </value>
                <value>
                    <fullName>Invalidated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this quote</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if quote requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPriced__c</fullName>
        <formula>NOT(ISNULL(vlocity_cmt__LastPricedAt__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Priced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsValidated__c</fullName>
        <formula>NOT(ISNULL(vlocity_cmt__ValidationDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastPricedAt__c</fullName>
        <label>Last Priced At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LeadSource__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates if an quote is locked by a user.</description>
        <inlineHelpText>This indicates if an quote is locked by a user.</inlineHelpText>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedFor__c</fullName>
        <description>This stores the reason for doing lock on the quote.</description>
        <inlineHelpText>This stores the reason for doing lock on the quote.</inlineHelpText>
        <label>Locked For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Async Operation</fullName>
                </value>
                <value>
                    <fullName>Manual Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MultiServiceMessageData__c</fullName>
        <description>This field stores messages that are generated and displayed in a MultiService feature.</description>
        <label>Multi Service Message Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfContractedMonths__c</fullName>
        <label>Number Of Contracted Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeMarginTotal__c</fullName>
        <label>One Time Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of one time totals of quotes for which this quote is a parent quote.</description>
        <label>Parent Quote One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>One Time Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityAccountId__c</fullName>
        <description>Formula: Opportunity&apos;s account identifier casted as a text value.</description>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingChannel__c</fullName>
        <description>Channel can be used to drive Eligibility/Compatibility/Recommendations/Pricing/Other implementations, e.g. Certain Product Bundles are only available on the Web or Call Center channel but not via the Retail and Dealer channels OR A product may have a different price when sold via the Web than sold via the Retail channel, etc.</description>
        <label>Originating Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentQuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates if this has parent quote. Parent quote here also refers to a master quote.</description>
        <label>Parent Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PoDate__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PoNumber__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Quotes Using This Price List</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Group to which the service point associated with this quote is linked</description>
        <label>Quote Group</label>
        <referenceTo>vlocity_cmt__QuoteGroup__c</referenceTo>
        <relationshipLabel>Group Quotes</relationshipLabel>
        <relationshipName>GroupQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteMarginTotal__c</fullName>
        <label>Quote Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteTotal__c</fullName>
        <formula>vlocity_cmt__OneTimeTotal__c +  Tax + ( vlocity_cmt__RecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringMarginTotal__c</fullName>
        <label>Recurring Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of recurring time totals of quotes for which this quote is a parent quote.</description>
        <label>Parent Quote Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Recurring Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RenewalSourceContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Source Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingPostalCode__c</fullName>
        <formula>ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingState__c</fullName>
        <formula>ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SyncedOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Synced Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Customer - Upgrade</fullName>
                </value>
                <value>
                    <fullName>Existing Customer - Replacement</fullName>
                </value>
                <value>
                    <fullName>Existing Customer - Downgrade</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMarginTotal__c</fullName>
        <description>Usage Margin Total</description>
        <label>Usage Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Date of last validation run</description>
        <inlineHelpText>Date of last validation run</inlineHelpText>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMessage__c</fullName>
        <description>Message from the last validation run</description>
        <inlineHelpText>Message from the last validation run</inlineHelpText>
        <label>Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>